refactor: Migrate to Spring Boot 3.3
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_3?organizationId=RklOT1M%3D

Co-authored-by: Moderne <team@moderne.io>